--- a/product.html
+++ b/product.html
@@ -8,6 +8,32 @@
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Prevent sticky buttons from covering content */
+    @media (max-width: 767px) {
+      #featured-product {
+        padding-bottom: 80px; /* same height as sticky button bar */
+      }
+      .sticky-buttons {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: white;
+        padding: 10px 16px;
+        box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+        z-index: 50;
+      }
+    }
+    @media (min-width: 768px) {
+      .sticky-buttons {
+        display: none;
+      }
+    }
+  </style>
 </head>
 <body class="font-sans bg-gradient-to-r from-green-200 to-blue-200 min-h-screen">
 
@@ -42,6 +68,12 @@
   <div id="other-products" class="grid grid-cols-2 md:grid-cols-4 gap-6 justify-center"></div>
 </div>
 
+<!-- Mobile Sticky Buttons -->
+<div id="mobile-buttons" class="sticky-buttons">
+  <button id="order-now-btn" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-500">Order Now</button>
+  <button id="add-to-cart-btn" class="bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">🛒 Add to Cart</button>
+</div>
+
 <!-- Sliding Cart -->
 <div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" 
      class="fixed right-0 top-0 max-w-xs w-full h-full px-6 py-4 transition transform bg-white border-l-2 border-gray-300 overflow-y-auto z-50">
@@ -54,6 +86,7 @@
   <hr class="my-3">
   <div id="cart-items" class="space-y-6"></div>
 
+  <!-- Total displayed above checkout button -->
   <div class="mt-4 text-lg font-bold text-gray-700 text-right" id="cart-total">Total: $0.00</div>
 
   <div class="mt-2 flex justify-center">
@@ -62,6 +95,7 @@
 </div>
 
 <script>
+// Load products from products.json
 let products = [];
 const params = new URLSearchParams(window.location.search);
 const featuredId = params.get('id') || null;
@@ -77,39 +111,37 @@ async function loadProducts() {
   }
 }
 
-// Featured product layout like Etsy
+// Render featured product
 function renderFeatured() {
   if(!featuredId) return;
   const featured = products.find(p => p.id === featuredId);
   if(!featured) return;
-
   const container = document.getElementById("featured-product");
   container.innerHTML = `
-    <div class="bg-white/80 rounded-lg shadow-md max-w-6xl w-full flex flex-col md:flex-row md:space-x-6 p-4">
-      <!-- Image -->
-      <div class="md:w-1/2 w-full">
+    <div class="bg-white/80 p-4 rounded-lg shadow-md md:flex md:items-center max-w-4xl w-full">
+      <div class="w-full md:w-1/2">
         <img src="${featured.image}" alt="${featured.name}" class="w-full h-auto object-contain rounded-lg">
       </div>
-
-      <!-- Info -->
-      <div class="md:w-1/2 w-full mt-4 md:mt-0 flex flex-col justify-between relative">
+      <div class="mt-4 md:mt-0 md:ml-6 md:w-1/2 flex flex-col justify-between">
         <div>
-          <h1 class="text-3xl font-bold text-gray-800 mb-2">${featured.name}</h1>
-          <p class="text-gray-500 text-xl mb-4">$${(featured.price/100).toFixed(2)}</p>
-          <p class="text-gray-700 mb-6">${featured.description}</p>
+          <h2 class="text-xl font-bold text-gray-700">${featured.name}</h2>
+          <p class="text-gray-500 my-2">$${(featured.price/100).toFixed(2)}</p>
+          <p class="text-gray-600 mb-4">${featured.description}</p>
         </div>
-
-        <!-- Buttons (sticky on mobile) -->
-        <div class="flex flex-col md:flex-row md:space-x-2 space-y-2 md:space-y-0 fixed bottom-0 left-0 right-0 md:static md:mt-4 bg-white md:bg-transparent p-4 md:p-0 shadow md:shadow-none">
-          <button onclick="buyNow('${featured.id}')" class="flex-1 bg-indigo-600 text-white px-4 py-3 rounded hover:bg-indigo-500 text-lg font-semibold">Order Now</button>
-          <button onclick="addToCart('${featured.id}')" class="flex-1 bg-gray-200 px-4 py-3 rounded hover:bg-gray-300 text-lg font-semibold">🛒 Add to Cart</button>
+        <div class="hidden md:flex space-x-2">
+          <button onclick="buyNow('${featured.id}')" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-500">Order Now</button>
+          <button onclick="addToCart('${featured.id}')" class="bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">🛒</button>
         </div>
       </div>
     </div>
   `;
+
+  // Mobile buttons functionality
+  document.getElementById("order-now-btn").onclick = () => buyNow(featured.id);
+  document.getElementById("add-to-cart-btn").onclick = () => addToCart(featured.id);
 }
 
-// Other products
+// Render other products
 function renderOtherProducts(filteredProducts) {
   const otherContainer = document.getElementById("other-products");
   otherContainer.innerHTML = '';
@@ -131,7 +163,7 @@ function renderOtherProducts(filteredProducts) {
   });
 }
 
-// Search/filter functions
+// Filter products by search + preview dropdown
 function filterProducts() {
   const query = document.getElementById("searchInput").value.toLowerCase();
   const preview = document.getElementById("searchPreview");
@@ -155,6 +187,7 @@ function filterProducts() {
   preview.classList.remove("hidden");
 }
 
+// Hide preview when clicking outside
 document.addEventListener("click", (e) => {
   if (!document.getElementById("searchInput").contains(e.target) &&
       !document.getElementById("searchPreview").contains(e.target)) {
@@ -186,10 +219,12 @@ function updateCartCount(){
   updateCartTotal();
 }
 
+// Render cart items
 function renderCartItems() {
   const container = document.getElementById("cart-items");
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   container.innerHTML = '';
+
   cart.forEach((item, index) => {
     const div = document.createElement('div');
     div.className = "flex items-center justify-between bg-gray-50 p-2 rounded shadow";
@@ -208,10 +243,12 @@ function renderCartItems() {
     `;
     container.appendChild(div);
   });
+
   localStorage.setItem("cart", JSON.stringify(cart));
   updateCartTotal();
 }
 
+// Quantity controls
 function increaseQuantity(index){
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   cart[index].quantity++;
@@ -240,12 +277,14 @@ function removeItem(index){
   updateCartCount();
 }
 
+// Update total display
 function updateCartTotal(){
   const cart = JSON.parse(localStorage.getItem("cart")) || [];
   const total = cart.reduce((sum,i) => sum + (i.price * i.quantity), 0);
   document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
 }
 
+// Checkout
 document.getElementById("checkout-btn").addEventListener("click", async () => {
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   if(cart.length === 0){
@@ -266,6 +305,7 @@ document.getElementById("checkout-btn").addEventListener("click", async () => {
   }
 });
 
+// Initial render
 renderCartItems();
 loadProducts();
 updateCartCount();
