--- a/product.html
+++ b/product.html
@@ -9,29 +9,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
   <style>
-    /* Prevent sticky buttons from covering content */
-    @media (max-width: 767px) {
-      #featured-product {
-        padding-bottom: 80px; /* same height as sticky button bar */
-      }
-      .sticky-buttons {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background: white;
-        padding: 10px 16px;
-        box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
-        z-index: 50;
-      }
-    }
-    @media (min-width: 768px) {
-      .sticky-buttons {
-        display: none;
-      }
+    /* Footer height matches mobile sticky buttons */
+    footer {
+      height: 80px; /* Adjust this if your sticky buttons change size */
     }
   </style>
 </head>
@@ -68,11 +48,7 @@
   <div id="other-products" class="grid grid-cols-2 md:grid-cols-4 gap-6 justify-center"></div>
 </div>
 
-<!-- Mobile Sticky Buttons -->
-<div id="mobile-buttons" class="sticky-buttons">
-  <button id="order-now-btn" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-500">Order Now</button>
-  <button id="add-to-cart-btn" class="bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">🛒 Add to Cart</button>
-</div>
+<!-- Sticky Mobile Buttons are inside Featured Product div -->
 
 <!-- Sliding Cart -->
 <div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" 
@@ -86,7 +62,6 @@
   <hr class="my-3">
   <div id="cart-items" class="space-y-6"></div>
 
-  <!-- Total displayed above checkout button -->
   <div class="mt-4 text-lg font-bold text-gray-700 text-right" id="cart-total">Total: $0.00</div>
 
   <div class="mt-2 flex justify-center">
@@ -94,8 +69,10 @@
   </div>
 </div>
 
+<!-- Footer to prevent mobile sticky buttons from covering content -->
+<footer class="md:hidden"></footer>
+
 <script>
-// Load products from products.json
 let products = [];
 const params = new URLSearchParams(window.location.search);
 const featuredId = params.get('id') || null;
@@ -111,37 +88,39 @@ async function loadProducts() {
   }
 }
 
-// Render featured product
+// Featured product layout like Etsy
 function renderFeatured() {
   if(!featuredId) return;
   const featured = products.find(p => p.id === featuredId);
   if(!featured) return;
+
   const container = document.getElementById("featured-product");
   container.innerHTML = `
-    <div class="bg-white/80 p-4 rounded-lg shadow-md md:flex md:items-center max-w-4xl w-full">
-      <div class="w-full md:w-1/2">
+    <div class="bg-white/80 rounded-lg shadow-md max-w-6xl w-full flex flex-col md:flex-row md:space-x-6 p-4">
+      <!-- Image -->
+      <div class="md:w-1/2 w-full">
         <img src="${featured.image}" alt="${featured.name}" class="w-full h-auto object-contain rounded-lg">
       </div>
-      <div class="mt-4 md:mt-0 md:ml-6 md:w-1/2 flex flex-col justify-between">
+
+      <!-- Info -->
+      <div class="md:w-1/2 w-full mt-4 md:mt-0 flex flex-col justify-between relative">
         <div>
-          <h2 class="text-xl font-bold text-gray-700">${featured.name}</h2>
-          <p class="text-gray-500 my-2">$${(featured.price/100).toFixed(2)}</p>
-          <p class="text-gray-600 mb-4">${featured.description}</p>
+          <h1 class="text-3xl font-bold text-gray-800 mb-2">${featured.name}</h1>
+          <p class="text-gray-500 text-xl mb-4">$${(featured.price/100).toFixed(2)}</p>
+          <p class="text-gray-700 mb-6">${featured.description}</p>
         </div>
-        <div class="hidden md:flex space-x-2">
-          <button onclick="buyNow('${featured.id}')" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-500">Order Now</button>
-          <button onclick="addToCart('${featured.id}')" class="bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">🛒</button>
+
+        <!-- Buttons (sticky on mobile) -->
+        <div class="flex flex-col md:flex-row md:space-x-2 space-y-2 md:space-y-0 fixed bottom-0 left-0 right-0 md:static md:mt-4 bg-white md:bg-transparent p-4 md:p-0 shadow md:shadow-none">
+          <button onclick="buyNow('${featured.id}')" class="flex-1 bg-indigo-600 text-white px-4 py-3 rounded hover:bg-indigo-500 text-lg font-semibold">Order Now</button>
+          <button onclick="addToCart('${featured.id}')" class="flex-1 bg-gray-200 px-4 py-3 rounded hover:bg-gray-300 text-lg font-semibold">🛒 Add to Cart</button>
         </div>
       </div>
     </div>
   `;
-
-  // Mobile buttons functionality
-  document.getElementById("order-now-btn").onclick = () => buyNow(featured.id);
-  document.getElementById("add-to-cart-btn").onclick = () => addToCart(featured.id);
 }
 
-// Render other products
+// Other products
 function renderOtherProducts(filteredProducts) {
   const otherContainer = document.getElementById("other-products");
   otherContainer.innerHTML = '';
@@ -163,7 +142,7 @@ function renderOtherProducts(filteredProducts) {
   });
 }
 
-// Filter products by search + preview dropdown
+// Search/filter functions
 function filterProducts() {
   const query = document.getElementById("searchInput").value.toLowerCase();
   const preview = document.getElementById("searchPreview");
@@ -187,7 +166,6 @@ function filterProducts() {
   preview.classList.remove("hidden");
 }
 
-// Hide preview when clicking outside
 document.addEventListener("click", (e) => {
   if (!document.getElementById("searchInput").contains(e.target) &&
       !document.getElementById("searchPreview").contains(e.target)) {
@@ -219,12 +197,10 @@ function updateCartCount(){
   updateCartTotal();
 }
 
-// Render cart items
 function renderCartItems() {
   const container = document.getElementById("cart-items");
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   container.innerHTML = '';
-
   cart.forEach((item, index) => {
     const div = document.createElement('div');
     div.className = "flex items-center justify-between bg-gray-50 p-2 rounded shadow";
@@ -243,12 +219,10 @@ function renderCartItems() {
     `;
     container.appendChild(div);
   });
-
   localStorage.setItem("cart", JSON.stringify(cart));
   updateCartTotal();
 }
 
-// Quantity controls
 function increaseQuantity(index){
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   cart[index].quantity++;
@@ -277,14 +251,12 @@ function removeItem(index){
   updateCartCount();
 }
 
-// Update total display
 function updateCartTotal(){
   const cart = JSON.parse(localStorage.getItem("cart")) || [];
   const total = cart.reduce((sum,i) => sum + (i.price * i.quantity), 0);
   document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
 }
 
-// Checkout
 document.getElementById("checkout-btn").addEventListener("click", async () => {
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   if(cart.length === 0){
@@ -305,7 +277,6 @@ document.getElementById("checkout-btn").addEventListener("click", async () => {
   }
 });
 
-// Initial render
 renderCartItems();
 loadProducts();
 updateCartCount();
