--- a/product.html
+++ b/product.html
@@ -14,6 +14,23 @@
     footer {
       height: 140px; /* Adjust this if your sticky buttons change size */
     }
+    /* ====== FEATURED PRODUCT SHRINKED ====== */
+    .featured-container {
+      max-width: 70%; /* Shrinks 30% from full width */
+    }
+    .featured-image {
+      max-width: 100%;
+      height: auto;
+    }
+    .featured-title {
+      font-size: 2xl; /* smaller than before */
+    }
+    .featured-price {
+      font-size: lg;
+    }
+    .featured-description {
+      font-size: base;
+    }
   </style>
 </head>
 
@@ -50,9 +67,6 @@
     <div id="other-products" class="grid grid-cols-2 md:grid-cols-4 gap-6 justify-center"></div>
   </div>
 
-  <!-- ====== STICKY MOBILE BUTTONS (INSIDE FEATURED PRODUCT) ====== -->
-  <!-- Note: Sticky buttons are part of the Featured Product div, see renderFeatured() -->
-
   <!-- ====== SLIDING CART ====== -->
   <div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" 
        class="fixed right-0 top-0 max-w-xs w-full h-full px-6 py-4 transition transform bg-white border-l-2 border-gray-300 overflow-y-auto z-50">
@@ -72,17 +86,15 @@
     </div>
   </div>
 
-  <!-- ====== FOOTER (TO PREVENT MOBILE STICKY BUTTONS COVERING CONTENT) ====== -->
+  <!-- ====== FOOTER ====== -->
   <footer class="md:hidden"></footer>
 
   <!-- ====== SCRIPT SECTION ====== -->
   <script>
-  // ====== GLOBAL VARIABLES ======
   let products = [];
   const params = new URLSearchParams(window.location.search);
   const featuredId = params.get('id') || null;
 
-  // ====== LOAD PRODUCTS ======
   async function loadProducts() {
     try {
       const res = await fetch('products.json');
@@ -94,7 +106,6 @@
     }
   }
 
-  // ====== RENDER FEATURED PRODUCT ======
   function renderFeatured() {
     if(!featuredId) return;
     const featured = products.find(p => p.id === featuredId);
@@ -102,21 +113,21 @@
 
     const container = document.getElementById("featured-product");
     container.innerHTML = `
-      <div class="bg-white/80 rounded-lg shadow-md max-w-6xl w-full flex flex-col md:flex-row md:space-x-6 p-4">
+      <div class="featured-container bg-white/80 rounded-lg shadow-md flex flex-col md:flex-row md:space-x-6 p-3">
         <!-- IMAGE -->
         <div class="md:w-1/2 w-full">
-          <img src="${featured.image}" alt="${featured.name}" class="w-full h-auto object-contain rounded-lg">
+          <img src="${featured.image}" alt="${featured.name}" class="featured-image w-full h-auto object-contain rounded-lg">
         </div>
         <!-- INFO -->
         <div class="md:w-1/2 w-full mt-4 md:mt-0 flex flex-col justify-between relative">
           <div>
-            <h1 class="text-3xl font-bold text-gray-800 mb-2">${featured.name}</h1>
-            <p class="text-gray-500 text-xl mb-4">$${(featured.price/100).toFixed(2)}</p>
-            <p class="text-gray-700 mb-6">${featured.description}</p>
+            <h1 class="featured-title font-bold text-gray-800 mb-2">${featured.name}</h1>
+            <p class="featured-price text-gray-500 mb-4">$${(featured.price/100).toFixed(2)}</p>
+            <p class="featured-description text-gray-700 mb-6">${featured.description}</p>
           </div>
 
           <!-- STICKY MOBILE BUTTONS -->
-          <div class="flex flex-col md:flex-row md:space-x-2 space-y-2 md:space-y-0 fixed bottom-0 left-0 right-0 md:static md:mt-4 bg-white md:bg-transparent p-4 md:p-0 shadow md:shadow-none">
+          <div class="flex flex-col md:flex-row md:space-x-2 space-y-2 md:space-y-0 fixed bottom-0 left-0 right-0 md:static md:mt-4 bg-white md:bg-transparent p-3 md:p-0 shadow md:shadow-none">
             <button onclick="buyNow('${featured.id}')" class="flex-1 bg-indigo-600 text-white px-4 py-3 rounded hover:bg-indigo-500 text-lg font-semibold">Order Now</button>
             <button onclick="addToCart('${featured.id}')" class="flex-1 bg-gray-200 px-4 py-3 rounded hover:bg-gray-300 text-lg font-semibold">🛒 Add to Cart</button>
           </div>
@@ -125,7 +136,6 @@
     `;
   }
 
-  // ====== RENDER OTHER PRODUCTS ======
   function renderOtherProducts(filteredProducts) {
     const otherContainer = document.getElementById("other-products");
     otherContainer.innerHTML = '';
@@ -147,7 +157,6 @@
     });
   }
 
-  // ====== SEARCH FILTER FUNCTIONS ======
   function filterProducts() {
     const query = document.getElementById("searchInput").value.toLowerCase();
     const preview = document.getElementById("searchPreview");
@@ -178,7 +187,7 @@
     }
   });
 
-  // ====== CART FUNCTIONS ======
+  // Placeholder cart functions (keep existing code)
   function addToCart(id){ /* ... */ }
   function buyNow(id){ /* ... */ }
   function updateCartCount(){ /* ... */ }
