--- a/product.html
+++ b/product.html
@@ -92,6 +92,7 @@
   <!-- ====== SCRIPT SECTION ====== -->
   <script>
   let products = [];
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
   const params = new URLSearchParams(window.location.search);
   const featuredId = params.get('id') || null;
 
@@ -113,7 +114,7 @@
 
     const container = document.getElementById("featured-product");
     container.innerHTML = `
-      <div class="featured-container bg-white/80 rounded-lg shadow-md flex flex-col md:flex-row md:space-x-6 p-3">
+      <div class="featured-container bg-white/80 rounded-lg shadow-md flex flex-col md:flex-row md:space-x-6 p-3 mx-auto">
         <!-- IMAGE -->
         <div class="md:w-1/2 w-full">
           <img src="${featured.image}" alt="${featured.name}" class="featured-image w-full h-auto object-contain rounded-lg">
@@ -187,17 +188,99 @@
     }
   });
 
-  // Placeholder cart functions (keep existing code)
-  function addToCart(id){ /* ... */ }
-  function buyNow(id){ /* ... */ }
-  function updateCartCount(){ /* ... */ }
-  function renderCartItems(){ /* ... */ }
-  function increaseQuantity(index){ /* ... */ }
-  function decreaseQuantity(index){ /* ... */ }
-  function removeItem(index){ /* ... */ }
-  function updateCartTotal(){ /* ... */ }
+  // ====== CART FUNCTIONS ======
+  function saveCart() {
+    localStorage.setItem("cart", JSON.stringify(cart));
+  }
 
-  document.getElementById("checkout-btn").addEventListener("click", async () => { /* ... */ });
+  function addToCart(id) {
+    const existing = cart.find(item => item.id === id);
+    if(existing) {
+      existing.quantity++;
+    } else {
+      const product = products.find(p => p.id === id);
+      if(!product) return;
+      cart.push({ ...product, quantity: 1 });
+    }
+    saveCart();
+    renderCartItems();
+    updateCartCount();
+  }
+
+  function buyNow(id) {
+    addToCart(id);
+    const cartPanel = document.querySelector('[x-data]');
+    cartPanel.__x.$data.cartOpen = true;
+  }
+
+  function increaseQuantity(index) {
+    cart[index].quantity++;
+    saveCart();
+    renderCartItems();
+    updateCartCount();
+  }
+
+  function decreaseQuantity(index) {
+    if(cart[index].quantity > 1){
+      cart[index].quantity--;
+    } else {
+      cart.splice(index,1);
+    }
+    saveCart();
+    renderCartItems();
+    updateCartCount();
+  }
+
+  function removeItem(index){
+    cart.splice(index,1);
+    saveCart();
+    renderCartItems();
+    updateCartCount();
+  }
+
+  function updateCartTotal() {
+    const total = cart.reduce((acc, item) => acc + item.price * item.quantity, 0);
+    document.getElementById("cart-total").textContent = `Total: $${(total/100).toFixed(2)}`;
+  }
+
+  function updateCartCount() {
+    document.getElementById("cart-count").textContent = cart.reduce((acc,item)=>acc+item.quantity,0);
+  }
+
+  function renderCartItems() {
+    const container = document.getElementById("cart-items");
+    container.innerHTML = '';
+    if(cart.length === 0){
+      container.innerHTML = `<div class="text-gray-500">Your cart is empty.</div>`;
+      updateCartTotal();
+      return;
+    }
+    cart.forEach((item,index) => {
+      const div = document.createElement('div');
+      div.className = "flex justify-between items-center border-b pb-2";
+      div.innerHTML = `
+        <div class="flex items-center space-x-3">
+          <img src="${item.image}" alt="${item.name}" class="w-12 h-12 object-contain rounded">
+          <div>
+            <div class="text-gray-700">${item.name}</div>
+            <div class="text-gray-500 text-sm">$${(item.price/100).toFixed(2)}</div>
+          </div>
+        </div>
+        <div class="flex items-center space-x-2">
+          <button onclick="decreaseQuantity(${index})" class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">-</button>
+          <span>${item.quantity}</span>
+          <button onclick="increaseQuantity(${index})" class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">+</button>
+          <button onclick="removeItem(${index})" class="px-2 py-1 text-red-500 hover:text-red-700">✕</button>
+        </div>
+      `;
+      container.appendChild(div);
+    });
+    updateCartTotal();
+  }
+
+  document.getElementById("checkout-btn").addEventListener("click", () => {
+    alert("Checkout clicked! Implement your payment gateway here.");
+  });
 
   // ====== INITIALIZE ======
   renderCartItems();
