--- a/product.html
+++ b/product.html
@@ -3,134 +3,200 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product Page</title>
+  <title>All Products — DjsDopeDesigns</title>
   <link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/64fb3589-910a-41d7-8767-d1e72606ffdb/Cartoon+women.PNG?format=2500w">
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
   <style>
-    /* Sticky footer space */
     footer { height: 140px; }
-
-    /* Featured container shrink */
     .featured-container { max-width: 70%; }
     .featured-image { max-width: 100%; height: auto; }
-    .featured-title { font-size: 1.5rem; }
-    .featured-price { font-size: 1.125rem; }
-    .featured-description { font-size: 1rem; }
+    .featured-title { font-size: 2xl; }
+    .featured-price { font-size: lg; }
+    .featured-description { font-size: base; }
   </style>
 </head>
+<body class="font-sans bg-gradient-to-r from-green-200 to-blue-200 min-h-screen">
 
-<body class="font-sans bg-white">
+<!-- HEADER -->
+<header class="bg-white shadow sticky top-0 z-50">
+  <div class="container mx-auto flex justify-between items-center px-4 py-4">
+    <a href="index.html" class="text-xl font-bold">DjsDopeDesigns</a>
+    <button @click="cartOpen = !cartOpen" class="relative text-gray-700 text-xl">
+      🛒 <span id="cart-count" class="absolute -top-2 -right-3 bg-orange-500 text-white rounded-full text-xs px-2">0</span>
+    </button>
+  </div>
+</header>
 
-  <!-- ===== HEADER NAVBAR ===== -->
-  <nav class="fixed top-0 left-0 z-20 w-full border-b border-gray-200 bg-white py-2.5 px-6 sm:px-4 shadow">
-    <div class="container mx-auto flex max-w-6xl flex-wrap items-center justify-between">
-      <a href="#" class="flex items-center text-xl font-semibold text-gray-800">DjsDopeDesigns</a>
-      <div class="mt-2 sm:mt-0 sm:flex md:order-2">
-        <button @click="cartOpen = !cartOpen" class="relative mr-3 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
-          🛒 Cart
-          <span id="cart-count" class="absolute -top-2 -right-3 bg-orange-500 text-white rounded-full text-xs px-2">0</span>
-        </button>
+<!-- SEARCH BAR -->
+<div class="container mx-auto px-4 py-4 relative flex justify-center">
+  <input type="text" id="searchInput" placeholder="Search products..." class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 mx-auto" oninput="filterProducts()">
+  <div id="searchPreview" class="absolute bg-white border border-gray-200 rounded shadow-md mt-1 w-full md:w-1/2 hidden z-50"></div>
+</div>
+
+<!-- FEATURED PRODUCT -->
+<div class="container mx-auto px-4 my-4 flex justify-center" id="featured-product"></div>
+
+<!-- OTHER PRODUCTS -->
+<div class="container mx-auto px-4 mt-8">
+  <div id="other-products" class="grid grid-cols-2 md:grid-cols-4 gap-6 justify-center"></div>
+</div>
+
+<!-- SLIDING CART -->
+<div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" class="fixed right-0 top-0 max-w-xs w-full h-full px-6 py-4 transition transform bg-white border-l-2 border-gray-300 overflow-y-auto z-50">
+  <div class="flex justify-between items-center">
+    <h3 class="text-2xl font-medium text-gray-700">Your cart</h3>
+    <button @click="cartOpen = !cartOpen" class="text-gray-600 focus:outline-none"> ✕ </button>
+  </div>
+  <hr class="my-3">
+  <div id="cart-items" class="space-y-6"></div>
+  <div class="mt-4 text-lg font-bold text-gray-700 text-right" id="cart-total">Total: $0.00</div>
+  <div class="mt-2 flex justify-center">
+    <button id="checkout-btn" class="flex items-center px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500">Checkout</button>
+  </div>
+</div>
+
+<footer class="md:hidden"></footer>
+
+<script>
+let products = [];
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
+const params = new URLSearchParams(window.location.search);
+const featuredId = params.get('id') || null;
+
+async function loadProducts() {
+  try {
+    const res = await fetch('products.json'); 
+    products = await res.json(); 
+    renderFeatured();
+    renderOtherProducts(products.filter(p => p.id !== featuredId));
+  } catch(err) {
+    console.error("Failed to load products:", err);
+  }
+}
+
+function renderFeatured() {
+  if(!featuredId) return;
+  const featured = products.find(p => p.id === featuredId);
+  if(!featured) return;
+  const container = document.getElementById("featured-product");
+  container.innerHTML = `
+    <div class="featured-container bg-white/80 rounded-lg shadow-md flex flex-col md:flex-row md:space-x-6 p-3 mx-auto">
+      <div class="md:w-1/2 w-full">
+        <img src="${featured.image}" alt="${featured.name}" class="featured-image w-full h-auto object-contain rounded-lg">
+      </div>
+      <div class="md:w-1/2 w-full mt-4 md:mt-0 flex flex-col justify-between relative">
+        <div>
+          <h1 class="featured-title font-bold text-gray-800 mb-2">${featured.name}</h1>
+          <p class="featured-price text-gray-500 mb-4">$${(featured.price/100).toFixed(2)}</p>
+          <p class="featured-description text-gray-700 mb-6">${featured.description}</p>
+        </div>
+        <div class="flex flex-col md:flex-row md:space-x-2 space-y-2 md:space-y-0 fixed bottom-0 left-0 right-0 md:static md:mt-4 bg-white md:bg-transparent p-3 md:p-0 shadow md:shadow-none">
+          <button onclick="buyNow('${featured.id}')" class="flex-1 bg-indigo-600 text-white px-4 py-3 rounded hover:bg-indigo-500 text-lg font-semibold">Order Now</button>
+          <button onclick="addToCart('${featured.id}')" class="flex-1 bg-gray-200 px-4 py-3 rounded hover:bg-gray-300 text-lg font-semibold">🛒 Add to Cart</button>
+        </div>
       </div>
     </div>
-  </nav>
+  `;
+}
 
-  <!-- ===== PAGE TITLE ===== -->
-  <div class="pt-32 bg-white text-center">
-    <h1 class="text-2xl font-bold text-gray-800">All Products</h1>
-  </div>
-
-  <!-- ===== SEARCH BAR ===== -->
-  <div class="container mx-auto px-4 py-4 relative flex justify-center">
-    <input 
-      type="text" 
-      id="searchInput" 
-      placeholder="Search products..." 
-      class="w-full md:w-1/2 px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 mx-auto"
-      oninput="filterProducts()"
-    >
-    <div id="searchPreview" class="absolute bg-white border border-gray-200 rounded shadow-md mt-1 w-full md:w-1/2 hidden z-50"></div>
-  </div>
-
-  <!-- ===== FEATURED PRODUCT ===== -->
-  <div class="container mx-auto px-4 my-4 flex justify-center" id="featured-product"></div>
-
-  <!-- ===== PRODUCT GRID ===== -->
-  <section class="py-10 bg-gray-100">
-    <div class="mx-auto grid max-w-6xl grid-cols-1 gap-6 p-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id="other-products">
-      <!-- Products will be injected here dynamically -->
-    </div>
-  </section>
-
-  <!-- ===== SLIDING CART ===== -->
-  <div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" 
-       class="fixed right-0 top-0 max-w-xs w-full h-full px-6 py-4 transition transform bg-white border-l-2 border-gray-300 overflow-y-auto z-50">
-    <div class="flex justify-between items-center">
-      <h3 class="text-2xl font-medium text-gray-700">Your cart</h3>
-      <button @click="cartOpen = !cartOpen" class="text-gray-600 focus:outline-none">✕</button>
-    </div>
-    <hr class="my-3">
-    <div id="cart-items" class="space-y-6"></div>
-    <div class="mt-4 text-lg font-bold text-gray-700 text-right" id="cart-total">Total: $0.00</div>
-    <div class="mt-2 flex justify-center">
-      <button id="checkout-btn" class="flex items-center px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500">Checkout</button>
-    </div>
-  </div>
-
-  <footer></footer>
-
-  <!-- ===== JS ===== -->
-  <script>
-  let products = [];
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  const params = new URLSearchParams(window.location.search);
-  const featuredId = params.get('id') || null;
-
-  async function loadProducts() {
-    try {
-      const res = await fetch('products.json');
-      products = await res.json();
-      renderFeatured();
-      renderOtherProducts(products.filter(p => p.id !== featuredId));
-    } catch(err) { console.error("Failed to load products:", err); }
-  }
-
-  function renderFeatured() {
-    if(!featuredId) return;
-    const featured = products.find(p => p.id === featuredId);
-    if(!featured) return;
-
-    const container = document.getElementById("featured-product");
-    container.innerHTML = `
-      <div class="featured-container bg-white rounded-xl shadow-md flex flex-col md:flex-row md:space-x-6 p-3 mx-auto hover:shadow-xl hover:scale-105 duration-300">
-        <div class="md:w-1/2 w-full">
-          <img src="${featured.image}" alt="${featured.name}" class="featured-image w-full h-auto object-contain rounded-lg">
-        </div>
-        <div class="md:w-1/2 w-full mt-4 md:mt-0 flex flex-col justify-between">
-          <div>
-            <h1 class="featured-title font-bold text-gray-800 mb-2">${featured.name}</h1>
-            <p class="featured-price text-gray-500 mb-4">$${(featured.price/100).toFixed(2)}</p>
-            <p class="featured-description text-gray-700 mb-6">${featured.description}</p>
-          </div>
-          <div class="flex space-x-2">
-            <button onclick="buyNow('${featured.id}')" class="flex-1 bg-blue-500 text-white px-4 py-3 rounded hover:bg-blue-600 text-lg font-semibold">Order Now</button>
-            <button onclick="addToCart('${featured.id}')" class="flex-1 bg-gray-200 px-4 py-3 rounded hover:bg-gray-300 text-lg font-semibold">🛒 Add to Cart</button>
-          </div>
-        </div>
+function renderOtherProducts(filteredProducts) {
+  const otherContainer = document.getElementById("other-products");
+  otherContainer.innerHTML = '';
+  filteredProducts.forEach(p => {
+    const div = document.createElement('div');
+    div.className = "bg-white/80 p-4 rounded-lg shadow-md flex flex-col items-center justify-between";
+    div.innerHTML = `
+      <div class="w-full aspect-w-1 aspect-h-1 mb-2">
+        <img src="${p.image}" alt="${p.name}" class="w-full h-full object-contain rounded">
+      </div>
+      <div class="text-sm font-medium text-gray-700 mb-1">${p.name}</div>
+      <div class="text-sm text-gray-500 mb-2">$${(p.price/100).toFixed(2)}</div>
+      <div class="flex space-x-2">
+        <a href="?id=${p.id}" class="bg-indigo-600 text-white px-3 py-1 rounded text-sm hover:bg-indigo-500">View</a>
+        <button onclick="addToCart('${p.id}')" class="bg-gray-200 px-2 py-1 rounded hover:bg-gray-300">🛒</button>
       </div>
     `;
-  }
+    otherContainer.appendChild(div);
+  });
+}
 
-  function renderOtherProducts(filteredProducts) {
-    const container = document.getElementById("other-products");
-    container.innerHTML = '';
-    filteredProducts.forEach(p => {
-      const div = document.createElement('article');
-      div.className = "rounded-xl bg-white p-3 shadow-lg hover:shadow-xl hover:transform hover:scale-105 duration-300";
-      div.innerHTML = `
-        <a href="?id=${p.id}">
-          <div class="relative flex items-end overflow-hidden rounded-xl">
-            <img src="${p.image}" alt="${p.name}" class="w-full h-48 object-cover rounded-xl">
-            <div class="absolute bottom-3 right-3 flex items-center space-x-1.5 rounded-lg bg-blue-500 px-3 py-1.5 text-white hover:bg-blue-600">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-
+function filterProducts() {
+  const query = document.getElementById("searchInput").value.toLowerCase();
+  const preview = document.getElementById("searchPreview");
+  if (!query) { preview.classList.add("hidden"); return; }
+  const filtered = products.filter(p => p.name.toLowerCase().startsWith(query));
+  if(filtered.length === 0) {
+    preview.innerHTML = `<div class="p-2 text-gray-500">No results</div>`;
+  } else {
+    preview.innerHTML = filtered.map(p => `
+      <a href="?id=${p.id}" class="flex items-center space-x-3 p-2 hover:bg-gray-100 rounded" onclick="document.getElementById('searchPreview').classList.add('hidden')">
+        <img src="${p.image}" alt="${p.name}" class="w-10 h-10 object-contain rounded">
+        <span class="text-gray-700">${p.name}</span>
+      </a>
+    `).join("");
+  }
+  preview.classList.remove("hidden");
+}
+
+document.addEventListener("click", (e) => {
+  if (!document.getElementById("searchInput").contains(e.target) && !document.getElementById("searchPreview").contains(e.target)) {
+    document.getElementById("searchPreview").classList.add("hidden");
+  }
+});
+
+// CART FUNCTIONS
+function saveCart() { localStorage.setItem("cart", JSON.stringify(cart)); }
+function addToCart(id) {
+  const existing = cart.find(item => item.id === id);
+  if(existing) { existing.quantity++; } 
+  else { 
+    const product = products.find(p => p.id === id);
+    if(!product) return;
+    cart.push({ ...product, quantity: 1 });
+  }
+  saveCart(); renderCartItems(); updateCartCount();
+}
+function buyNow(id) { addToCart(id); const cartPanel = document.querySelector('[x-data]'); cartPanel.__x.$data.cartOpen = true; }
+function increaseQuantity(index) { cart[index].quantity++; saveCart(); renderCartItems(); updateCartCount(); }
+function decreaseQuantity(index) { if(cart[index].quantity > 1){ cart[index].quantity--; } else { cart.splice(index,1); } saveCart(); renderCartItems(); updateCartCount(); }
+function removeItem(index){ cart.splice(index,1); saveCart(); renderCartItems(); updateCartCount(); }
+function updateCartTotal() { const total = cart.reduce((acc, item) => acc + item.price * item.quantity, 0); document.getElementById("cart-total").textContent = `Total: $${(total/100).toFixed(2)}`; }
+function updateCartCount() { document.getElementById("cart-count").textContent = cart.reduce((acc,item)=>acc+item.quantity,0); }
+function renderCartItems() {
+  const container = document.getElementById("cart-items");
+  container.innerHTML = '';
+  if(cart.length === 0){ container.innerHTML = `<div class="text-gray-500">Your cart is empty.</div>`; updateCartTotal(); return; }
+  cart.forEach((item,index) => {
+    const div = document.createElement('div');
+    div.className = "flex justify-between items-center border-b pb-2";
+    div.innerHTML = `
+      <div class="flex items-center space-x-3">
+        <img src="${item.image}" alt="${item.name}" class="w-12 h-12 object-contain rounded">
+        <div>
+          <div class="text-gray-700">${item.name}</div>
+          <div class="text-gray-500 text-sm">$${(item.price/100).toFixed(2)}</div>
+        </div>
+      </div>
+      <div class="flex items-center space-x-2">
+        <button onclick="decreaseQuantity(${index})" class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">-</button>
+        <span>${item.quantity}</span>
+        <button onclick="increaseQuantity(${index})" class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">+</button>
+        <button onclick="removeItem(${index})" class="px-2 py-1 text-red-500 hover:text-red-700">✕</button>
+      </div>
+    `;
+    container.appendChild(div);
+  });
+  updateCartTotal();
+}
+
+document.getElementById("checkout-btn").addEventListener("click", () => { alert("Checkout clicked! Implement your payment gateway here."); });
+
+// INITIALIZE
+renderCartItems(); 
+loadProducts(); 
+updateCartCount();
+</script>
+</body>
+</html>
